# BDA_ISE

./: .env.example  .gitignore  LLM_README.md  RAG.py  README.md  app.py  config.py  llm_config.py  llm_provider.py  logger.py  material.py  puppeteer-config.json  pyproject.toml  streamlit_app.py  streamlit_app_new.py  test_imports.py
assets/: dark-theme.css
prompts/: __init__.py  study_material.py  topic_extraction.py
src/: __init__.py  rag_system.py
src/core/: __init__.py
src/processing/: __init__.py
src/search/: __init__.py
src/utils/: __init__.py
tests/: quick_test_llama.py
uploads/: dc_materials.md
